Update styles, html and assets to match the design

--- a/index.html
+++ b/index.html
@@ -254,6 +254,8 @@
       justify-content: center;
       align-items: center;
       padding-bottom: 30px;
+      padding-left: 51.5px;
+      padding-right: 51.5px;
     }
 
     #es-sodastream.es-sodastream .es-set__img {
@@ -273,7 +275,6 @@
 
     #es-sodastream.es-sodastream .es-set__desc {
       font-size: 16px;
-      width: 92%;
       padding-left: 0px;
       padding-right: 20px;
       color: #13294b !important;
@@ -284,8 +285,6 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      padding-left: 20px;
-      padding-right: 20px;
     }
 
     #es-sodastream.es-sodastream .es-set__group-left,
@@ -316,7 +315,6 @@
       justify-content: center;
       align-items: center;
       margin: 0 auto;
-      max-width: 400px;
     }
 
     #es-sodastream.es-sodastream .es-slider__single {
@@ -703,6 +701,209 @@
     #es-sodastream.es-sodastream .es-possibilities__title {
       margin-top: 50px;
     }
+    #es-sodastream.es-sodastream .es-bez {
+      background-color: rgb(235, 230, 225);
+    }
+    #es-sodastream.es-sodastream .es-bez__title {
+      position: relative;
+      margin: 0 0 30px 0;
+      line-height: inherit;
+      color: inherit;
+      font-family: empik, 'Black', sans-serif;
+      padding: 15px 15px 0;
+      text-align: center;
+      text-transform: uppercase;
+      font-size: 28px;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop {
+      display: none;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop > div {
+      flex: 1;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop > .es-bez__wrapper-desktop-sodastream-container {
+      position: relative;
+      flex: 1.5;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(1) {
+      top: 14%;
+      left: 15%;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(2) {
+      top: 29%;
+      left: 69%;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(3) {
+      top: 63%;
+      left: 8%;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text {
+      position: absolute;
+      font-family: empik, 'Black', sans-serif;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-img {
+      max-width: 100%;
+      display: block;
+      margin: 0 auto;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text--small {
+      margin: 0;
+      font-size: 14px;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text--big {
+      margin: 0;
+      font-size: 22px;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-left,
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-right {
+      display: none;
+      font-size: 16px;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-left > p {
+      text-align: right;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-left > p:nth-child(1) {
+      padding-left: 58px;
+      margin-top: 9%;
+      margin-right: -13%;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-left > p:nth-child(2) {
+      padding-left: 15px;
+      margin-top: 18%;
+      margin-right: 2%;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-right > p {
+      padding-right: 22px;
+      margin-top: 25%;
+      margin-left: -6%;
+      text-align: left;
+    }
+    #es-sodastream.es-sodastream .es-bez__text {
+      text-align: center;
+      font-size: 16px;
+      margin: 0;
+      padding: 20px 36.094px;
+    }
+    @media screen and (min-width: 350px) {
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text--small {
+        margin: 0;
+        font-size: 18px;
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text--big {
+        margin: 0;
+        font-size: 26px;
+      }
+    }
+    @media screen and (min-width: 550px) {
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text--small {
+        font-family: empik, 'Bold', sans-serif;
+        font-size: 18px;
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text--big {
+        font-family: empik, 'Black', sans-serif;
+        font-size: 48px;
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(1) {
+        top: 50%;
+        left: 50%;
+        transform: translate(-200%, -245%);
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(2) {
+        top: 50%;
+        left: 50%;
+        transform: translate(135%, -140%);
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(3) {
+        top: 50%;
+        left: 50%;
+        transform: translate(-207%, 143%);
+      }
+    }
+
+    #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container {
+      display: flex;
+      flex-direction: column;
+      padding: 0 5%;
+    }
+
+    #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container > * {
+      flex: 1;
+    }
+
+    #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-image-wrapper {
+      display: flex;
+      justify-content: center;
+      flex: 0.1;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text-wrapper {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      align-items: center;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text--big {
+      font-family: empik, 'Black', sans-serif;
+      font-size: 22px
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text--small {
+      font-size: 16px;
+    }
+
+    @media screen and (min-width: 768px) {
+      #es-sodastream.es-sodastream .es-bez__title {
+        font-family: empik, 'Black', sans-serif;
+        font-weight: 900;
+        font-size: 20px;
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text-wrapper {
+        padding-left: 5%;
+      }
+    }
+
+    @media screen and (min-width: 1010px) {
+      #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container {
+        flex-direction: row;
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text-wrapper {
+        padding-left: 5%;
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text--big {
+        font-size: 22px;
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text--small {
+        font-size: 20px;
+      }
+    }
+
+    @media screen and (min-width: 1150px) {
+      #es-sodastream.es-sodastream .es-bez__wrapper-mobile {
+        display: none;
+      }
+
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop {
+        display: flex;
+      }
+
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-left,
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-right {
+        display: block;
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(1) {
+        transform: unset;
+        top: 11%;
+        left: 15%;
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(2) {
+        transform: unset;
+        top: 26%;
+        left: 70%;
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(3) {
+        transform: unset;
+        top: 61%;
+        left: 4%;
+      }
+    }
 
     @media (min-width: 1250px) {
       #es-sodastream.es-sodastream .es-kv {
@@ -749,6 +950,7 @@
       }
 
       #es-sodastream.es-sodastream .es-slider__subtitle {
+        margin-top: 10px;
         font-size: 36px;
       }
 
@@ -978,6 +1180,7 @@
         font-size: 36px;
       }
 
+      #es-sodastream.es-sodastream .es-bez__title,
       #es-sodastream.es-sodastream .es-slider__subtitle {
         font-size: 36px;
       }
@@ -1119,7 +1322,7 @@
       }
 
       #es-sodastream.es-sodastream .es-kv__img {
-        margin-right: 0;
+        margin-right: 110px;
       }
     }
 
@@ -1129,7 +1332,7 @@
       }
 
       #es-sodastream.es-sodastream .es-kv__img {
-        margin-right: 80px;
+        margin-right: 105px;
       }
 
       #es-sodastream.es-sodastream .es-slider__ctn {
@@ -1211,6 +1414,86 @@
         </div>
       </div>
     </div>
+
+    <div class="es-bez">
+      <h2 class="es-bez__title">
+        subtelna słodycz<br />z witaminowym wsparciem*
+      </h2>
+
+      <div class="es-bez__wrapper-desktop">
+        <div class="es-bez__wrapper-desktop-text-container-left">
+          <p>
+            Czas na chwilę relaksu!
+            Niacyna pomaga zmniejszyć uczucie zmęczenia i znużenia, a teraz znajdziesz ją w syropie SodaStream o smaku Kwiatu Czarnego Bzu.
+          </p>
+          <p>
+            Pozwól otulić się delikatnym, kwiatowym smakiem, który wspiera Twój organizm! Syrop SodaStream o smaku Kwiatu Czarnego Bzu został wzbogacony cynkiem, pomagającym utrzymać w dobrej kondycji włosy, skórę
+            i paznokcie. To pyszny smak
+            i coś ekstra dla Ciebie!
+          </p>
+        </div>
+
+        <div class="es-bez__wrapper-desktop-sodastream-container">
+          <div class="es-bez__wrapper-desktop-sodastream-container-text">
+            <p class="es-bez__wrapper-desktop-sodastream-container-text--small">witamina</p>
+            <p class="es-bez__wrapper-desktop-sodastream-container-text--big">B3</p>
+          </div>
+          <div class="es-bez__wrapper-desktop-sodastream-container-text">
+            <p class="es-bez__wrapper-desktop-sodastream-container-text--small">witamina</p>
+            <p class="es-bez__wrapper-desktop-sodastream-container-text--big">B6</p>
+          </div>
+          <div class="es-bez__wrapper-desktop-sodastream-container-text">
+            <p class="es-bez__wrapper-desktop-sodastream-container-text--big">cynk</p>
+          </div>
+          <img src="./img/bez-desktop.png" alt="" loading="lazy" class="es-bez__wrapper-desktop-sodastream-container-img">
+        </div>
+
+        <div class="es-bez__wrapper-desktop-text-container-right">
+          <p>
+            Zanurz się w kwiatowym aromacie i otul witaminowym wsparciem. Syrop SodaStream
+            o smaku Kwiatu Czarnego Bzu zawiera teraz także witaminę B6,
+            która wspiera prawidłowe funkcjonowanie układu nerwowego i odpornościowego.
+          </p>
+        </div>
+      </div>
+
+      <div class="es-bez__wrapper-mobile">
+        <div class="es-bez__wrapper-mobile-sodastream-container">
+          <div class="es-bez__wrapper-mobile-sodastream-container-image-wrapper">
+            <img src="./img/bez-mobile.png" alt="" loading="lazy" class="es-bez__wrapper-mobile-sodastream-container-img">
+          </div>
+          <div class="es-bez__wrapper-mobile-sodastream-container-text-wrapper">
+            <div class="es-bez__wrapper-mobile-sodastream-container-text">
+              <p class="es-bez__wrapper-mobile-sodastream-container-text--big">witamina B3</p>
+              <p class="es-bez__wrapper-mobile-sodastream-container-text--small">
+                Czas na chwilę relaksu!
+                Niacyna pomaga zmniejszyć uczucie zmęczenia i znużenia, a teraz znajdziesz ją w syropie SodaStream o smaku Kwiatu Czarnego Bzu.
+              </p>
+            </div>
+            <div class="es-bez__wrapper-mobile-sodastream-container-text">
+              <p class="es-bez__wrapper-mobile-sodastream-container-text--big">witamina B6</p>
+              <p class="es-bez__wrapper-mobile-sodastream-container-text--small">
+                Pozwól otulić się delikatnym, kwiatowym smakiem, który wspiera Twój organizm! Syrop SodaStream o smaku Kwiatu Czarnego Bzu został wzbogacony cynkiem, pomagającym utrzymać w dobrej kondycji włosy, skórę
+                i paznokcie. To pyszny smak
+                i coś ekstra dla Ciebie!
+              </p>
+            </div>
+            <div class="es-bez__wrapper-mobile-sodastream-container-text">
+              <p class="es-bez__wrapper-mobile-sodastream-container-text--big">cynk</p>
+              <p class="es-bez__wrapper-mobile-sodastream-container-text--small">
+                Zanurz się w kwiatowym aromacie i otul witaminowym wsparciem. Syrop SodaStream
+                o smaku Kwiatu Czarnego Bzu zawiera teraz także witaminę B6,
+                która wspiera prawidłowe funkcjonowanie układu nerwowego i odpornościowego.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <p class="es-bez__text">*Witaminy i minerały zawarte w produkcie wspierają prawidłowe funkcjonowanie organizmu. Nie zastępują
+        jednak zróżnicowanej diety ani zdrowego trybu życia, które są podstawą dobrego zdrowia.</p>
+    </div>
+
     <div class="es-slider">
       <div class="es-sliderCtn">
         <div class="es-slider__wrapper">
