--- a/index.html
+++ b/index.html
@@ -808,6 +808,7 @@
         font-size: 20px;
       }
       #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text-wrapper {
+        margin-top: 30px;
         padding-left: 5%;
       }
     }
