--- a/index.html
+++ b/index.html
@@ -134,6 +134,214 @@
       font-size: 20px;
       margin: 0;
       text-align: center;
+    }    #es-sodastream.es-sodastream .es-bez {
+           background-color: rgb(235, 230, 225);
+         }
+    #es-sodastream.es-sodastream .es-bez__title {
+      position: relative;
+      margin: 0 0 30px 0;
+      line-height: inherit;
+      color: inherit;
+      font-family: empik, 'Black', sans-serif;
+      padding: 15px 15px 0;
+      text-align: center;
+      text-transform: uppercase;
+      font-size: 20px;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop {
+      display: none;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop > div {
+      flex: 1;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop > .es-bez__wrapper-desktop-sodastream-container {
+      position: relative;
+      flex: 1.5;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(1) {
+      top: 14%;
+      left: 15%;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(2) {
+      top: 29%;
+      left: 69%;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(3) {
+      top: 60%;
+      left: 8%;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text {
+      position: absolute;
+      font-family: empik, 'Black', sans-serif;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-img {
+      max-width: 100%;
+      display: block;
+      margin: 0 auto;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text--small {
+      margin: 0;
+      font-size: 14px;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text--big {
+      margin: 0;
+      font-size: 22px;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-left,
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-right {
+      display: none;
+      font-size: 16px;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-left > p {
+      text-align: right;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-left > p:nth-child(1) {
+      padding-left: 39px;
+      margin-right: -13%;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-left > p:nth-child(2) {
+      padding-left: 22px;
+      margin-top: 8%;
+      margin-right: 2%;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-right > p {
+      padding-right: 22px;
+      margin-top: 20%;
+      margin-left: 2%;
+      text-align: left;
+    }
+    #es-sodastream.es-sodastream .es-bez__text {
+      text-align: center;
+      font-size: 16px;
+      margin: 0;
+      padding: 20px 36.094px;
+    }
+    @media screen and (min-width: 350px) {
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text--small {
+        margin: 0;
+        font-size: 18px;
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text--big {
+        margin: 0;
+        font-size: 26px;
+      }
+      #es-sodastream.es-sodastream .es-efficiency__img {
+        max-width: 350px;
+      }
+    }
+    @media screen and (max-width: 350px) {
+      #es-sodastream.es-sodastream p.es-video__hash {
+        font-size: 28px;
+      }
+    }
+    @media screen and (min-width: 550px) {
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text--small {
+        font-weight: 600;
+        font-family: empik, 'Bold', sans-serif;
+        font-size: 18px;
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text--big {
+        font-family: empik, 'Black', sans-serif;
+        font-size: 48px;
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(1) {
+        top: 50%;
+        left: 50%;
+        transform: translate(-200%, -245%);
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(2) {
+        top: 50%;
+        left: 50%;
+        transform: translate(135%, -140%);
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(3) {
+        top: 50%;
+        left: 50%;
+        transform: translate(-207%, 143%);
+      }
+    }
+
+    #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container {
+      display: flex;
+      flex-direction: column;
+      padding: 0 5%;
+    }
+
+    #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container > * {
+      flex: 1;
+    }
+
+    #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-image-wrapper {
+      display: flex;
+      justify-content: center;
+      flex: 0.1;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text-wrapper {
+      margin-top: 30px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      align-items: center;
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text--big {
+      font-weight: 600;
+      font-size: 22px
+    }
+    #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text--small {
+      font-size: 16px;
+    }
+
+    @media screen and (min-width: 768px) {
+      #es-sodastream.es-sodastream .es-bez__title {
+        font-family: empik, 'Black', sans-serif;
+        font-weight: 900;
+        font-size: 20px;
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text-wrapper {
+        padding-left: 5%;
+      }
+    }
+
+    @media screen and (min-width: 1010px) {
+      #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text-wrapper {
+        padding-left: 5%;
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text--big {
+        font-size: 22px;
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text--small {
+        font-size: 20px;
+      }
+    }
+
+    @media screen and (min-width: 1365px) {
+      #es-sodastream.es-sodastream .es-bez__wrapper-mobile {
+        display: none;
+      }
+
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop {
+        display: flex;
+      }
+
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-left,
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-right {
+        display: block;
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(1) {
+        transform: unset;
+        top: 11%;
+        left: 18%;
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(2) {
+        transform: unset;
+        top: 27%;
+        left: 74%;
+      }
+      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(3) {
+        transform: unset;
+        top: 64%;
+        left: 5%;
+      }
     }
 
     #es-sodastream.es-sodastream .es-efficiency {
@@ -157,14 +365,13 @@
     }
 
     #es-sodastream.es-sodastream .es-efficiency__img {
-      max-width: 300px;
       margin: 30px 0;
     }
 
     #es-sodastream.es-sodastream .es-efficiency__desc {
       font-size: 16px;
       margin: 20px auto;
-      width: 77%;
+      width: 80%;
       text-align: center;
       color: #eeeae5 !important;
     }
@@ -229,8 +436,6 @@
       justify-content: center;
       align-items: center;
       padding-bottom: 30px;
-      padding-left: 51.5px;
-      padding-right: 51.5px;
     }
 
     #es-sodastream.es-sodastream .es-set__img {
@@ -250,16 +455,19 @@
 
     #es-sodastream.es-sodastream .es-set__desc {
       font-size: 16px;
-      padding-left: 0px;
-      padding-right: 20px;
+      margin: 20px auto;
+      width: 85%;
       color: #13294b !important;
-      text-align: left;
+      text-align: center;
     }
 
     #es-sodastream.es-sodastream .es-set__group {
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
+      align-items: center;
+      padding-left: 20px;
+      padding-right: 20px;
+      gap: 20px;
     }
 
     #es-sodastream.es-sodastream .es-set__group-left,
@@ -275,13 +483,7 @@
       font-size: 16px;
       font-weight: bold;
       color: #13294b !important;
-    }
-
-    #es-sodastream.es-sodastream .es-set__group-subtitle {
-      margin-top: 0;
-      margin-bottom: 20px;
-      font-size: 16px;
-      color: #13294b !important;
+      text-transform: uppercase;
     }
 
     #es-sodastream.es-sodastream .es-slider__ctn {
@@ -407,6 +609,7 @@
       background-color: #ebe6e1;
       min-height: 500px;
       padding-bottom: 150px;
+      margin-top: -1px;
     }
 
     #es-sodastream.es-sodastream .es-slider__title {
@@ -591,7 +794,7 @@
     #es-sodastream.es-sodastream .es-syroups__desc {
       text-align: center;
       font-size: 16px;
-      width: 83%;
+      width: 86%;
       margin: 20px 0;
       margin-bottom: 50px;
       color: #eeeae5 !important;
@@ -652,208 +855,6 @@
     #es-sodastream.es-sodastream .es-possibilities__title {
       margin-top: 50px;
     }
-    #es-sodastream.es-sodastream .es-bez {
-      background-color: rgb(235, 230, 225);
-    }
-    #es-sodastream.es-sodastream .es-bez__title {
-      position: relative;
-      margin: 0 0 30px 0;
-      line-height: inherit;
-      color: inherit;
-      font-family: empik, 'Black', sans-serif;
-      padding: 15px 15px 0;
-      text-align: center;
-      text-transform: uppercase;
-      font-size: 28px;
-    }
-    #es-sodastream.es-sodastream .es-bez__wrapper-desktop {
-      display: none;
-    }
-    #es-sodastream.es-sodastream .es-bez__wrapper-desktop > div {
-      flex: 1;
-    }
-    #es-sodastream.es-sodastream .es-bez__wrapper-desktop > .es-bez__wrapper-desktop-sodastream-container {
-      position: relative;
-      flex: 1.5;
-    }
-    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(1) {
-      top: 14%;
-      left: 15%;
-    }
-    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(2) {
-      top: 29%;
-      left: 69%;
-    }
-    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(3) {
-      top: 63%;
-      left: 8%;
-    }
-    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text {
-      position: absolute;
-      font-family: empik, 'Black', sans-serif;
-    }
-    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-img {
-      max-width: 100%;
-      display: block;
-      margin: 0 auto;
-    }
-    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text--small {
-      margin: 0;
-      font-size: 14px;
-    }
-    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text--big {
-      margin: 0;
-      font-size: 22px;
-    }
-    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-left,
-    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-right {
-      display: none;
-      font-size: 16px;
-    }
-    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-left > p {
-      text-align: right;
-    }
-    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-left > p:nth-child(1) {
-      padding-left: 58px;
-      margin-top: 9%;
-      margin-right: -13%;
-    }
-    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-left > p:nth-child(2) {
-      padding-left: 15px;
-      margin-top: 18%;
-      margin-right: 2%;
-    }
-    #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-right > p {
-      padding-right: 22px;
-      margin-top: 25%;
-      margin-left: -6%;
-      text-align: left;
-    }
-    #es-sodastream.es-sodastream .es-bez__text {
-      text-align: center;
-      font-size: 16px;
-      margin: 0;
-      padding: 20px 36.094px;
-    }
-    @media screen and (min-width: 350px) {
-      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text--small {
-        margin: 0;
-        font-size: 18px;
-      }
-      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text--big {
-        margin: 0;
-        font-size: 26px;
-      }
-    }
-    @media screen and (min-width: 550px) {
-      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text--small {
-        font-family: empik, 'Bold', sans-serif;
-        font-size: 18px;
-        font-weight: 600;
-      }
-      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text--big {
-        font-family: empik, 'Black', sans-serif;
-        font-size: 48px;
-      }
-      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(1) {
-        top: 50%;
-        left: 50%;
-        transform: translate(-200%, -245%);
-      }
-      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(2) {
-        top: 50%;
-        left: 50%;
-        transform: translate(135%, -140%);
-      }
-      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(3) {
-        top: 50%;
-        left: 50%;
-        transform: translate(-207%, 143%);
-      }
-    }
-
-    #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container {
-      display: flex;
-      flex-direction: column;
-      padding: 0 5%;
-    }
-
-    #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container > * {
-      flex: 1;
-    }
-
-    #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-image-wrapper {
-      display: flex;
-      justify-content: center;
-      flex: 0.1;
-    }
-    #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text-wrapper {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: flex-start;
-      align-items: center;
-    }
-    #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text--big {
-      font-weight: 600;
-      font-size: 22px
-    }
-    #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text--small {
-      font-size: 16px;
-    }
-
-    @media screen and (min-width: 768px) {
-      #es-sodastream.es-sodastream .es-bez__title {
-        font-family: empik, 'Black', sans-serif;
-        font-weight: 900;
-        font-size: 20px;
-      }
-      #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text-wrapper {
-        margin-top: 30px;
-        padding-left: 5%;
-      }
-    }
-
-    @media screen and (min-width: 1010px) {
-      #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text-wrapper {
-        padding-left: 5%;
-      }
-      #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text--big {
-        font-size: 22px;
-      }
-      #es-sodastream.es-sodastream .es-bez__wrapper-mobile-sodastream-container-text--small {
-        font-size: 20px;
-      }
-    }
-
-    @media screen and (min-width: 1365px) {
-      #es-sodastream.es-sodastream .es-bez__wrapper-mobile {
-        display: none;
-      }
-
-      #es-sodastream.es-sodastream .es-bez__wrapper-desktop {
-        display: flex;
-      }
-
-      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-left,
-      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-text-container-right {
-        display: block;
-      }
-      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(1) {
-        transform: unset;
-        top: 11%;
-        left: 15%;
-      }
-      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(2) {
-        transform: unset;
-        top: 26%;
-        left: 70%;
-      }
-      #es-sodastream.es-sodastream .es-bez__wrapper-desktop-sodastream-container-text:nth-child(3) {
-        transform: unset;
-        top: 61%;
-        left: 4%;
-      }
-    }
 
     @media (min-width: 1250px) {
       #es-sodastream.es-sodastream .es-kv {
@@ -900,7 +901,6 @@
       }
 
       #es-sodastream.es-sodastream .es-slider__subtitle {
-        margin-top: 10px;
         font-size: 36px;
       }
 
@@ -923,7 +923,7 @@
 
       #es-sodastream.es-sodastream .es-efficiency__title {
         font-size: 36px;
-        max-width: 100%;
+        max-width: 80%;
       }
 
       #es-sodastream.es-sodastream .es-efficiency__desc {
@@ -943,9 +943,16 @@
         max-width: 450px;
       }
 
+      #es-sodastream.es-sodastream .es-set__group {
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-around;
+        gap: 0;
+      }
+
       #es-sodastream.es-sodastream .es-set__group-left,
       #es-sodastream.es-sodastream .es-set__group-right {
-        max-width: 43%;
+        max-width: 42%;
       }
 
       #es-sodastream.es-sodastream .es-steps__items {
@@ -1102,7 +1109,6 @@
         top: 17%;
         left: 8%;
         font-size: 207px;
-        color: #e5dcd3 !important;
       }
 
       #es-sodastream.es-sodastream .es-kv__title {
@@ -1130,7 +1136,6 @@
         font-size: 36px;
       }
 
-      #es-sodastream.es-sodastream .es-bez__title,
       #es-sodastream.es-sodastream .es-slider__subtitle {
         font-size: 36px;
       }
@@ -1208,7 +1213,7 @@
 
       #es-sodastream.es-sodastream .es-slider__texts {
         padding: 10px 40px;
-        width: 85%;
+        width: 72.6%;
       }
 
       #es-sodastream.es-sodastream .es-slider__text {
@@ -1218,7 +1223,7 @@
       }
 
       #es-sodastream.es-sodastream .es-dis__text {
-        width: 79%;
+        width: 87.2%;
       }
 
       #es-sodastream.es-sodastream .es-syroups__title {
